addition of congruences of a congruence

--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -146,6 +146,7 @@
 \newcommand{\sP}{\ensuremath{\mathcal{P}}}
 \newcommand{\alphar}{\ensuremath{\mathrel{\alpha}}}
 \newcommand{\betar}{\ensuremath{\mathrel{\beta}}}
+\newcommand{\gammar}{\ensuremath{\mathrel{\gamma}}}
 \newcommand{\balpha}{\ensuremath{\boldsymbol{\alpha}}}
 \newcommand{\bbeta}{\ensuremath{\boldsymbol{\beta}}}
 \newcommand{\bone}{\ensuremath{\boldsymbol{1}}}
